apps/caseprofile/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caseprofile
  namespace: casego-apps
  labels:
    app: caseprofile
spec:
  selector:
    matchLabels:
      app: caseprofile
  template:
    metadata:
      labels:
        app: caseprofile
    spec:
      containers:
        - name: caseprofile
          image: ghcr.io/sewaustav/casego-caseprofile:main-1781964748-36eff90217b1a445e2acfd5cc9f566913dfc17ca # {"$imagepolicy": "flux-system:casego-caseprofile"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8082
            - name: grpc
              containerPort: 50051
          resources:
            requests:
              cpu: 30m
              memory: 64Mi
            limits:
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: migrations
          emptyDir: {}
